added system with upload image in React changed system with storing logged user data globally

--- a/React/src/pages/Home/Home.css
+++ b/React/src/pages/Home/Home.css
@@ -39,3 +39,8 @@ a {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
+
+.card-img {
+    height: 250px;
+    object-fit: cover;
+}
