little changes to image css

--- a/React/src/pages/Home/Home.css
+++ b/React/src/pages/Home/Home.css
@@ -44,3 +44,10 @@ a {
     height: 250px;
     object-fit: cover;
 }
+
+.profile-img-header
+{
+    width: 45px;
+    height: 45px;
+    object-fit: cover;
+}
