--- a/React/src/pages/Settings/Settings.css
+++ b/React/src/pages/Settings/Settings.css
@@ -53,3 +53,15 @@
 .value svg {
     width: 15px;
 }
+
+.profile-img-settings
+{
+    height: 150px;
+    object-fit: cover;
+}
+
+.background-img-settings
+{
+    height: 250px;
+    object-fit: cover;
+}
