--- a/React/src/pages/Profile/Profile.css
+++ b/React/src/pages/Profile/Profile.css
@@ -119,3 +119,24 @@
 .edit-button:hover {
     background-color: #444;
 }
+
+.delete-button {
+    display: flex;
+    padding: 7px 7px;
+    font-size: 16px;
+    color: #bb3b1b;
+    background-color: #333;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+    
+.delete-button:hover {
+    background-color: #444;
+}
+
+.breadCrumb {
+    color: #FBCA53;
+    font-weight: 700;
+}
