added security to user endpoints, now it requires jwtToken added small visual fixes

--- a/React/src/pages/Home/Home.css
+++ b/React/src/pages/Home/Home.css
@@ -24,6 +24,10 @@ body {
     background-color: #3a3a3a;
 }
 
+.category-btn.active:hover {
+    background-color: #FBCA53;
+}
+
 a {
     text-decoration: none;
 }
